# PrintingPartitioning

./: .gitignore  CMakeLists.txt  HoughSpace.cpp  HoughSpace.h  HoughVisualization.cpp  HoughVisualization.h  QHeatMap.cpp  QHeatMap.h  README.md  SliceApp.cpp  SliceApp.h  defs.h  main.cpp  process_batch.py  slice_runner.py  task_creator.py
3D/: Polyhedron.cpp  Polyhedron.h  PolyhedronVisualizer.cpp  PolyhedronVisualizer.h  Polyhedron_cut.cpp  Polyhedron_skeleton.cpp  Polyhedron_voxels.cpp  Visualizer3D.cpp  Visualizer3D.h
3D/shaders/: pointcloud.frag  pointcloud.vert  wireframe.frag  wireframe.geom  wireframe.vert
Algorithms/: BinarySearchHough.cpp  BinarySearchHough.h  ContractionAlgorithm.cpp  ContractionAlgorithm.h  CutAlgorithm.cpp  CutAlgorithm.h  CutAlgorithmWidget.cpp  CutAlgorithmWidget.h  ExternalBaseAlgorithm.cpp  ExternalBaseAlgorithm.h  HoughAlgorithm.cpp  HoughAlgorithm.h  RandomCut.cpp  RandomCut.h  StochasTip.cpp  StochasTip.h
models3d/pyramidal_other/: bk.stl  bk2.stl  carr.STL  carr2.STL  carr3.STL  hollow_cube.stl  leg.stl
resultpage/: generate_links.py  results.html
